--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "python.pythonPath": "/Users/bradtraversy/.local/share/virtualenvs/lead_manager_react_django-912rtT3t/bin/python"
+  "python.pythonPath": "/usr/local/bin/python3",
+  "python.linting.pylintEnabled": true
 }
